[package]
name = "wow_srp_c"
version = "0.1.0"
edition = "2021"

[lib]
name = "wow_srp"
crate-type = ["cdylib", "staticlib"]

[features]
default = ["vanilla", "tbc", "wrath", "client", "server"]
vanilla = []
tbc = []
wrath = []
client = []
server = []

[dependencies]
wow_srp = { version = "0.6.0", features = ["srp-default-math", "wrath-header", "tbc-header"] }
